firefox-3.0 (3.0~b4~rc1+nobinonly-0ubuntu1) UNRELEASED; urgency=low

  * Bump xulrunner-1.9 dependencies to b4
    - update debian/control
  * Refresh diverged patches:
    - update debian/patches/dont_depend_on_nspr_sources.patch
    - update debian/patches/force_safebrowsing_off.patch
  * Drop extension from desktop launchers icons (LP: #190688)
    - update debian/firefox-3.0-*.desktop
  * Install new libjemalloc.so
    - update debian/firefox-3.0.install
  * Add optional support for system sqlite3 (we need >= 3.5 not in hardy)
    - update debian/rules
  * Fix debsearch.src to work with new packages.ubuntu.com codebase (LP: #194681)
    Contributed by David Futcher <bobbocanfly@gmail.com>
    - update debian/debsearch.src
  * Bump gtk+ requirement to 2.10 because of the new Print Dialog
    - update debian/control
  * Add Polish translation to deskstop launcher (LP: #196953)
    Contributed by Tomasz Dominikowski <dominikowski@gmail.com>
    - update debian/firefox-3.0-final.desktop
  * Change $(shell) into $(wildcard) for XUL SDK detection
    - update debian/rules
  * Drop DEB_AUTO_UPDATE_DEBIAN_CONTROL cdbs variable completely. It was
    wrongly set to zero
    - update debian/rules
  * Stop build-tree/mozilla/README to be shipped as a doc by setting
    cdbs DEB_INSTALL_DOCS_ALL to $(NULL)
    - update debian/rules

 -- Fabien Tassin <fta@sofaraway.org>  Tue, 04 Mar 2008 21:17:29 +0100

firefox-3.0 (3.0~b3+nobinonly-0ubuntu4) hardy; urgency=low

  * fix firefox.desktop install (ftbfs)
    - update debian/firefox-3.0.install
  * fix StartupWMClass in desktop file
    - update debian/firefox-3.0-final.desktop
  * fix Name and Description and Exec in desktop file
    - update debian/firefox-3.0-final.desktop

 -- Alexander Sack <asac@ubuntu.com>  Mon, 25 Feb 2008 14:37:43 +0100

firefox-3.0 (3.0~b3+nobinonly-0ubuntu3) hardy; urgency=low

  * introduce transitional dummy package for firefox-libthai => firefox-3.0